--- a/template-application/root/css/styles.css
+++ b/template-application/root/css/styles.css
@@ -1,6 +1,25 @@
 /**
  * Main styles for: {%= name %}
  */
+body .node-unpublished {
+  background-repeat: no-repeat;
+}
+      
+.interactive-container  {
+  max-width: 960px;
+  margin: 0 auto;
+  padding-top: 1em;
+}
+
+.interactive-container .footnote {
+  font-size: .75em;
+  font-style: italic;
+  color: #414141;
+  margin-top: 3em;
+  border-top: 1px solid #BCBCBC;
+  padding-top: 1em;
+}
+      
 .{%= name %}-application-container {
 
 }
