--- a/template-application/root/css/_styles.scss
+++ b/template-application/root/css/_styles.scss
@@ -1,5 +1,10 @@
 /**
- * Main styles for application
+ * Main styles for: {%= name %}
+ *
+ * Make the default styles for a 960px wide screen.  A mobile
+ * first approach is fine, but starting with a 960px wide
+ * screen means that older browsers that do not support
+ * media queries will be fine as they are all desktop browsers. 
  */
 
 body .node-unpublished {
@@ -20,9 +25,22 @@ body .node-unpublished {
   .clear {
     clear: both;
   }
-  .js-dependent,
   .hidden {
     display: none;
+  }
+
+  /* Clearfix from http://nicolasgallagher.com/micro-clearfix-hack/ */
+  .cf:before,
+  .cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+  }
+
+  .cf:after {
+    clear: both;
+  }
+  .cf {
+    *zoom: 1;
   }
   
   .footnote {
@@ -52,4 +70,29 @@ body .node-unpublished {
     }
   }
   
+  {% if (map) { %}
+  .leaflet-container {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 1em;
+  
+    .map-label-container {
+      min-width: 10em;
+      max-width: 18em;
+      min-height: 2em;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      border-radius: 4px;
+      background-color: rgba(255, 255, 255, 0.9);
+      -moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+      -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+      border: 1px solid #888;
+    
+      .map-label-inner-container {
+        padding: .5em;
+      }
+    }
+  }
+  {% } %}
 }
