--- a/template-application/root/css/main.ie.scss
+++ b/template-application/root/css/main.ie.scss
@@ -1,3 +1,22 @@
 /**
  * IE specific styles
  */
+.ie-upgrade-note {
+  margin: 1em 1em;
+  padding: 1em;
+  font-size: .75em;
+  border: 1px solid #222222;
+  background-color: #E2E2E2;
+  color: #222222;
+}
+
+{% if (map) { %}
+.{%= name %}-application-container {
+  .leaflet-container {
+    .map-label-container {
+      background-color: rgb(255, 255, 255);
+      border: 3px solid #888;
+    }
+  }
+}
+{% } %}
