--- a/template-application/root/sass/main.scss
+++ b/template-application/root/sass/main.scss
@@ -1,6 +1,7 @@
 /**
  * Merge all stylesheets into one
  */
+{% if (use_compass) { %}@import "compass";{% } %}
 @import "_variables";
 @import "_mixins";
 @import "_helpers";
