--- a/template-application/root/js/templates/template-footnote.html
+++ b/template-application/root/js/templates/template-footnote.html
@@ -1,3 +1,3 @@
 <div class="footnote">
-  <p>Code, techniques, and data on <a href="{%= homepage %}" target="_blank">Github</a>.</p>
+  <p>{% if (has_maps) { %}Some map data &copy; OpenStreetMap contributors; licensed under the <a href="http://www.openstreetmap.org/copyright" target="_blank">Open Data Commons Open Database License</a>.  Some map design &copy; MapBox; licensed according to the <a href="http://mapbox.com/tos/" target="_blank">MapBox Terms of Service</a>.  {% } %}Some code, techniques, and data on <a href="{%= homepage %}" target="_blank">Github</a>.</p>
 </div>
